logs/Interfaces_0.6.log
>>> 'Pkg.add("Interfaces")' log
INFO: Cloning cache of Interfaces from https://github.com/Rory-Finnegan/Interfaces.jl.git
INFO: Installing Docile v0.5.23
INFO: Installing Interfaces v0.0.4
INFO: Building Interfaces
/home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c: In function ‘jl_type_mutable_union_append’:
/home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:49:9: error: implicit declaration of function ‘jl_svec_append’ [-Werror=implicit-function-declaration]
         jl_svec_t *new_types = jl_svec_append(_union->types, jl_svec_fill(1, t));
         ^
/home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:49:32: error: initialization makes pointer from integer without a cast [-Werror]
         jl_svec_t *new_types = jl_svec_append(_union->types, jl_svec_fill(1, t));
                                ^
cc1: all warnings being treated as errors
=============================[ ERROR: Interfaces ]==============================

LoadError: failed process: Process(`gcc -c -Wall -Werror -fPIC -I/home/vagrant/julia/bin/../include/julia /home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c -o /home/vagrant/.julia/v0.6/Interfaces/deps/usr/lib/mutable_union.o`, ProcessExited(1)) [1]
while loading /home/vagrant/.julia/v0.6/Interfaces/deps/build.jl, in expression starting on line 13

================================================================================

================================[ BUILD ERRORS ]================================

WARNING: Interfaces had build errors.

 - packages with build errors remain installed in /home/vagrant/.julia/v0.6
 - build the package(s) and all dependencies with `Pkg.build("Interfaces")`
 - build a single package by running its `deps/build.jl` script

================================================================================
INFO: Package database updated
INFO: METADATA is out-of-date — you may not have the latest version of Interfaces
INFO: Use `Pkg.update()` to get the latest versions of your packages

>>> 'Pkg.test("Interfaces")' log
Julia Version 0.6.0-dev.1918
Commit cfa2312 (2017-01-04 22:03 UTC)
Platform Info:
  OS: Linux (x86_64-pc-linux-gnu)
  CPU: Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz
  WORD_SIZE: 64
           Ubuntu 14.04.5 LTS
  uname: Linux 3.13.0-105-generic #152-Ubuntu SMP Fri Dec 2 15:37:11 UTC 2016 x86_64 x86_64
Memory: 2.9392738342285156 GB (2116.1484375 MB free)
Uptime: 36627.0 sec
Load Avg:  1.05908203125  1.03271484375  1.04833984375
Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
       speed         user         nice          sys         idle          irq
#1  3512 MHz    1878541 s       6644 s     212950 s    1177249 s        105 s
#2  3512 MHz     812928 s         71 s     145939 s    2591717 s          2 s

  BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Nehalem)
  LAPACK: libopenblas64_
  LIBM: libopenlibm
  LLVM: libLLVM-3.9.1 (ORCJIT, haswell)
Environment:
  TERM = vt100
  LD_LIBRARY_PATH = :/usr/local/lib/
  PATH = /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/
  JAVA_HOME = /usr/lib/jvm/java-7-oracle
  HOME = /home/vagrant

Package Directory: /home/vagrant/.julia/v0.6
2 required packages:
 - Interfaces                    0.0.4
 - JSON                          0.8.0
6 additional packages:
 - Compat                        0.10.0
 - CompilerTools                 0.2.1
 - DataStructures                0.4.6
 - DocOpt                        0.2.0
 - Docile                        0.5.23
 - ParallelAccelerator           0.2.2              6da2e374 (dirty)
INFO: Testing Interfaces
ERROR: LoadError: LoadError: could not load library "/home/vagrant/.julia/v0.6/Interfaces/test/../src/../deps/usr/lib/lib_mutable_union.so"
/home/vagrant/.julia/v0.6/Interfaces/test/../src/../deps/usr/lib/lib_mutable_union.so: cannot open shared object file: No such file or directory
Stacktrace:
 [1] dlopen(::String, ::UInt32) at ./libdl.jl:97 (repeats 2 times)
 [2] include_from_node1(::String) at ./loading.jl:532
 [3] include(::String) at ./sysimg.jl:14
 [4] include_from_node1(::String) at ./loading.jl:532
 [5] include(::String) at ./sysimg.jl:14
 [6] process_options(::Base.JLOptions) at ./client.jl:298
 [7] _start() at ./client.jl:364
while loading /home/vagrant/.julia/v0.6/Interfaces/test/../src/Interfaces.jl, in expression starting on line 8
while loading /home/vagrant/.julia/v0.6/Interfaces/test/runtests.jl, in expression starting on line 1
=============================[ ERROR: Interfaces ]==============================

failed process: Process(`/home/vagrant/julia/bin/julia -Cx86-64 -J/home/vagrant/julia/lib/julia/sys.so --compile=yes --depwarn=yes --check-bounds=yes --code-coverage=none --color=no --compilecache=yes /home/vagrant/.julia/v0.6/Interfaces/test/runtests.jl`, ProcessExited(1)) [1]

================================================================================
ERROR: Interfaces had test errors
Stacktrace:
 [1] #test#61(::Bool, ::Function, ::Array{AbstractString,1}) at ./pkg/entry.jl:754
 [2] (::Base.Pkg.Entry.#kw##test)(::Array{Any,1}, ::Base.Pkg.Entry.#test, ::Array{AbstractString,1}) at ./<missing>:0
 [3] (::Base.Pkg.Dir.##2#3{Array{Any,1},Base.Pkg.Entry.#test,Tuple{Array{AbstractString,1}}})() at ./pkg/dir.jl:31
 [4] cd(::Base.Pkg.Dir.##2#3{Array{Any,1},Base.Pkg.Entry.#test,Tuple{Array{AbstractString,1}}}, ::String) at ./file.jl:69
 [5] #cd#1(::Array{Any,1}, ::Function, ::Function, ::Array{AbstractString,1}, ::Vararg{Array{AbstractString,1},N}) at ./pkg/dir.jl:31
 [6] (::Base.Pkg.Dir.#kw##cd)(::Array{Any,1}, ::Base.Pkg.Dir.#cd, ::Function, ::Array{AbstractString,1}, ::Vararg{Array{AbstractString,1},N}) at ./<missing>:0
 [7] #test#3(::Bool, ::Function, ::String, ::Vararg{String,N}) at ./pkg/pkg.jl:261
 [8] test(::String, ::Vararg{String,N}) at ./pkg/pkg.jl:261
 [9] eval(::Module, ::Any) at ./boot.jl:236
 [10] process_options(::Base.JLOptions) at ./client.jl:275
 [11] _start() at ./client.jl:364

>>> End of log
